--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: DBetterModel
-authors: ['The DenizenScript Team', '0TickPulse', 'heypr', 'Ignaacioo']
-version: 1.0
+authors: ['gleb_petrovich (meigoc)', 'isnsest']
+version: 2.0
 main: net.openproject.dbettermodel.DBetterModel
 depend: [Denizen, BetterModel]
 
-api-version: '1.13'
+api-version: '1.20'
 
 softdepend: []
