--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,11 @@
 name: DBetterModel
-authors: ['gleb_petrovich (meigoc)']
-version: 2.1.0
+author: meigoc
+authors: ['gleb_petrovich (meigoc)', 'isnsest']
+version: ${version}
 main: net.openproject.dbettermodel.DBetterModel
 depend: [Denizen, BetterModel]
+website: https://github.com/meigoc/DBetterModel
 
-api-version: '1.20'
+api-version: '1.21'
 
 softdepend: []
