--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 project.build.sourceEncoding=UTF-8
-craftbukkit.version=1.21.4-R0.1-SNAPSHOT
+craftbukkit.version=1.21.10-R0.1-20251219.234337-50
 denizen.version=1.3.1-SNAPSHOT
-bettermodel.version=1.14.0
-BUILD_NUMBER=4.3.0
+bettermodel.version=1.15.0
+BUILD_NUMBER=5.0.0
